# bitcode

./: README.md  pyproject.toml
bitcode/: __init__.py  enums.py  testing.ipynb
bitcode/abstractions/: analytics.py
bitcode/core/: bot.py  client.py
bitcode/objects/: __init__.py  abs.py  base.py  kline.py  ticker.py  trade.py
bitcode/predictor/: lstm_predictor.py  simple_predictor.py
bitcode/predictors/: abs.py  base.py  lstm_predictor.py  simple_predictor.py
bitcode/utils/: graph.py  utils_time.py  vars.py
tests/: test_lstm_backtest.py  test_lstm_predictor.py  test_predictor.py  test_simple_backtest.py
tests/lab1/: test1.py
tests/lab2/: test1.py  test2.py  test3.py  test4.py
tests/lab3/: __init__.py  test1.py
